# nfra-reporting

./: RAG.md  README.md  pyproject.toml  requirements.txt
Preprocessing/JSON/prompts/: BS.j2  CF.j2  PL.j2
Preprocessing/LLM/: pipeline.py  schemas.py
REPORT/: Compliance_Report_BSE_Limited_20260214_154937.md  Compliance_Report_L55200MH1967PLC013837_20260213_200500.md  Compliance_Report_L55200MH1967PLC013837_20260214_160252.md  Compliance_Report_L55200MH1967PLC013837_20260214_161820.md  Compliance_Report_L55200MH1967PLC013837_20260214_163846.md  Compliance_Report_L55200MH1967PLC013837_20260214_175644.md  Compliance_Report_tmp2ek8kuo__20260214_153932.md  Compliance_Report_tmplrv8fuyu_20260214_163249.md  Compliance_Report_tmpyfkgsvz5_20260214_132512.md
Streamlit/: app.py
config/: __init__.py  logging.py  settings.py
resources/models/: LR_NFRA_vectorizer.pkl
resources/prompts/: knowledge_graph.json  prompts.py
results/BSE Limited/: balance_sheet.json  cash_flow.json  profit_and_loss.json
results/FOODS/: cash_flow.json  profit_and_loss.json
results/Foods & Inns Ltd/: balance_sheet.json  cash_flow.json  profit_and_loss.json
scripts/: refactor_structure.ps1
src/api/: server.py
src/api/routes/: ingest.py  nfra_query.py  rag_query.py
src/core/: state.py  workflow.py
src/core/agents/: accountant.py  auditor.py  gatekeeper.py  publisher.py  quant.py
src/services/database/: db_config.py  db_init.py  models.py
src/services/extraction/llm/: __init__.py  extractor.py  normalizer.py  pipeline.py
src/services/rag/: embedding_service.py  ingestion_service.py  llm_parser.py  markdown_parser.py  pdf_parser.py  rag_service.py  retrieval_service.py  section_splitter.py
src/utils/: preprocessing.py
tests/: test_db_handshake.py  test_full_system.py  test_workflow_debug.py
